# camconvert

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  csgwriter.cpp  csgwriter.hpp  main.cpp  readfile.cpp  readfile.hpp  surface.cpp  surface.hpp  surface_manager.cpp  surface_manager.hpp  volume.cpp  volume.hpp  volume_manager.cpp  volume_manager.hpp
src/test/: CMakeLists.txt  test_CamConvert.cpp
